<resources>
    <string name="app_name">Disha</string>
    <string name="country_code">+91</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login_button">LOGIN</string>
    <string name="you_entered">You entered</string>
    <string name="edit">Edit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_button">Verify</string>
    <string name="resend_otp">Resend OTP ?</string>
    <string name="welcome_text">Welcome</string>
    <string name="enter_valid_mobile_number">Enter valid mobile number</string>
    <string name="ok">OK</string>
    <string name="authenticating">Please wait, while we are authenticating with your phone</string>
    <string name="is_this_ok">Is this OK, or would you like to edit the number?</string>
    <string name="verifying_otp">Please wait, while we are verifying code that has been sent to your phone</string>
    <string name="verifying_mobile_number">Verifying your mobile number</string>
    <string name="too_may_attempts">You have attempted too many login requests\\nTry Again Later</string>
    <string name="try_again_later">Try again later</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_try_after_some_time">Error ! Try Again</string>
    <string name="otp_sent_to_mobile">OTP sent to your mobile</string>
    <string name="install_latest_google_play">Install latest GooglePlay Services and Try again</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="emergency">Emergency Contacts</string>
    <string name="tips_for_women">Tips For Women</string>
    <string name="fav_cont">Favorite Contacts</string>
    <string name="file_complaint">File a complaint</string>
    <string name="help_me">Help Me</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter age</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_gender">Select Gender</string>
    <string name="profile_updated">Profile updated successfully.....</string>
    <string name="age">Age</string>
    <string name="gender">Gender :"</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="save">Save</string>
    <string name="add_contact">Add Contact</string>
    <string name="denied_location">You have denied location permission. So please GRANT permission in Settings…</string>
    <string name="submit">Submit</string>
</resources>