<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/logo_name_design"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_launcher_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobile_number_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/logo_name_design"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_code"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/mobile_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/loginButton"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:soundEffectsEnabled="true"
                    android:text="@string/login_button"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/verify_otp_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/logo_name_design"
                android:orientation="vertical"
                android:visibility="invisible">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_entered"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/show_mobile_number"
                        android:paddingLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/edit_number"
                        android:paddingLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:textSize="18sp"
                        android:textColor="@color/blue"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/enter_otp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:hint="@string/enter_otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/verify_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/loginButton"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:soundEffectsEnabled="true"
                    android:text="@string/verify_button"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/resend_otp_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resend_otp"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/resend_otp_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>